--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2004-05-03  Michael Gogins <gogins@pipeline.com>
+
+    * Fixed midiinterop opcodes that were broken when moved to csound5.
+
 2004-05-01  Michael Gogins <gogins@pipeline.com>
 
     * Added a new csoundPerformKsmpsAbsolute API function for calling kperf 
