--- a/csound.tex
+++ b/csound.tex
@@ -376,7 +376,7 @@ This is a ``to do'' list, not necessarily complete, for Csound and CsoundVST:
 \begin{enumerate}
 \item In preparation for a beta file release package:
 \begin{enumerate}
-\item Get all the example scores working out of the box, and add one for real-time Python performance with a Python GUI.
+\item Get all the example scores working out of the box.
 \item Complete this document sufficiently to get users started building and running Csound and CsoundVST with MinGW and Linux.
 \item Get MIDI input and output working better on Windows.
 \item A \emph{\textbf{Mathematica}} interface - but what kind? C API or MathLink wrappers?
