--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2004-05-05  Michael Gogins <gogins@pipeline.com>
+
+      * Fixed Fl_graph.cpp and widgets.cpp event handling with 
+        thread protection. FLTK widgets work now (at least on
+        Windows).
+      
 2004-05-05  John ffitch  <jpff@codemist.co.uk>
 
 	* strings/all_strings: 
