--- a/csound.tex
+++ b/csound.tex
@@ -100,7 +100,7 @@ to:
 cmd = SCons.Util.CLVar(['$SHLINK', '$SHLINKFLAGS']) 
 \end{verbatim}
 
-It is highly recommend that you update your MinGW installation from the SourceForge site to the ``current'' level for core gcc, g++, binutils, and utils.
+It is highly recommend that you update your MinGW installation from the SourceForge site to the ``current'' level for core gcc, g++, binutils,  utils, and the Windows API headers and libraries.(w32api).
 
 Rebuild and install a version of libsndfile no earlier than:
 \begin{verbatim}
